--- a/index.html
+++ b/index.html
@@ -51,15 +51,22 @@
                 <h5>24/7 Free Support.</h5>
             </div>
         </div>
+        <div id="offer">
+            <h3>Hot Deal ! Sale Up To 25% Off</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            <button>Sign Up</button>
+
+        </div>
 <h3 class="insta">Instagram</h3>
     <p class="third-paragraph" >It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-<div class="Rectangle">
-    <img class="pink rose" src="Flower Asset/Flower 01.png" alt="">
-    <img class="pink rose" src="Flower Asset/Rectangle 4.png" alt="">
-    <img class="pink rose" src="Flower Asset/Rectangle 5.png" alt="">
-    <img class="pink rose" src="Flower Asset/Rectangle 6.png" alt="">
-</div>
-</div>
+    <div>
+        <img class="pink-rose" src="Flower Asset/Flower 01.png" alt="">
+        <img class="pink-rose" src="Flower Asset/Rectangle 4.png" alt="">
+        <img class="pink-rose" src="Flower Asset/Rectangle 5.png" alt="">
+        <img class="pink-rose" src="Flower Asset/Rectangle 6.png" alt="">
+    </div>
+    <h3 class="deals">Get The Latest Deals</h3>
+        <p class="coupon">$30 coupon for first shopping</p>
     </main>
     <footer>
 
