--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <div>
+        <div id="#first-part">
             <nav>
                 <h2 class="use-of-flower">Let's make <br> beautiful flowers a <br>part of your life.</h2>
                 </nav>
@@ -52,10 +52,11 @@
             </div>
         </div>
         <div id="offer">
+            <div class="discount">
             <h3>Hot Deal ! Sale Up To 25% Off</h3>
             <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-            <button>Sign Up</button>
-
+            <button id="sign-in">Sign Up</button></div>
+            <img class="flower-vase" src="Flower Asset/pngwing 8.png" alt="">
         </div>
 <h3 class="insta">Instagram</h3>
     <p class="third-paragraph" >It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
