--- a/index.html
+++ b/index.html
@@ -66,11 +66,14 @@
         <img class="pink-rose" src="Flower Asset/Rectangle 5.png" alt="">
         <img class="pink-rose" src="Flower Asset/Rectangle 6.png" alt="">
     </div>
-    <h3 class="deals">Get The Latest Deals</h3>
-        <p class="coupon">$30 coupon for first shopping</p>
+
     </main>
     <footer>
-
+        <div>
+            <h3>FlowerShops</h3>
+            <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+            <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+        </div>
     </footer>    
 </body>
 </html>
