--- a/index.html
+++ b/index.html
@@ -68,11 +68,13 @@
     </div>
 
     </main>
-    <footer>
+    <footer id="footer-creating">
+        <div> <img src="Flower Asset/Rectangle 9.png" alt=""></div>
         <div>
             <h3>FlowerShops</h3>
             <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
             <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+            im
         </div>
     </footer>    
 </body>
