--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 </p>
               <button class="Shop">Shop Now</button>   
         </div>
-      <img src="Flower Asset/pngwing 10.png" alt="Tulip">
+      <img src="Flower-Asset/pngwing 10.png" alt="Tulip">
     </header>
     <main>
         <h3 class="second-part">Our Featured Flowers</h3>
@@ -26,28 +26,28 @@
             </p>
         <div class="three-images">
         <div>
-                    <img class="Pink" class="second-1" src="Flower Asset/pngwing 6.png" alt="">
+                    <img class="Pink" class="second-1" src="Flower-Asset/pngwing 6.png" alt="">
                     <p>Pink Flower Tree</p>
          </div>
 
                <div>
-                    <img class="Flower" class="second-1"  src="Flower Asset/pngwing 5.png" alt="">
+                    <img class="Flower" class="second-1"  src="Flower-Asset/pngwing 5.png" alt="">
                     <p>Pink Flower Tree</p>
                 </div>
                <div>
-                    <img class="Tree" class="second-1"  src="Flower Asset/pngwing 7.png" alt="">
+                    <img class="Tree" class="second-1"  src="Flower-Asset/pngwing 7.png" alt="">
                     <p>Pink Flower Tree</p>
                 </div>
                  </div>
         <div id="third-part">
             <div class="address">
-                <img src="Flower Asset/Group 57.png" alt="">
+                <img src="Flower-Asset/Group 57.png" alt="">
                 <h5>Same Day Delivery. Click & Collect.</h5></div>
             <div class="address">
-                <img src="Flower Asset/Group 58.png" alt="">
+                <img src="Flower-Asset/Group 58.png" alt="">
                 <h5>Fresh Flowers. Local Growers.</h5></div>
             <div class="address">
-                <img src="Flower Asset/Group 59.png" alt="">
+                <img src="Flower-Asset/Group 59.png" alt="">
                 <h5>24/7 Free Support.</h5>
             </div>
         </div>
@@ -56,26 +56,29 @@
             <h3>Hot Deal ! Sale Up To 25% Off</h3>
             <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
             <button id="sign-in">Sign Up</button></div>
-            <img class="flower-vase" src="Flower Asset/pngwing 8.png" alt="">
+            <img class="flower-vase" src="Flower-Asset/pngwing 8.png" alt="">
         </div>
 <h3 class="insta">Instagram</h3>
     <p class="third-paragraph" >It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-    <div>
-        <img class="pink-rose" src="Flower Asset/Flower 01.png" alt="">
-        <img class="pink-rose" src="Flower Asset/Rectangle 4.png" alt="">
-        <img class="pink-rose" src="Flower Asset/Rectangle 5.png" alt="">
-        <img class="pink-rose" src="Flower Asset/Rectangle 6.png" alt="">
+    <div class="pink-roses">
+        <img class="pink-rose" src="Flower-Asset/Flower 01.png" alt="">
+        <img class="pink-rose" src="Flower-Asset/Rectangle 4.png" alt="">
+        <img class="pink-rose" src="Flower-Asset/Rectangle 5.png" alt="">
+        <img class="pink-rose" src="Flower-Asset/Rectangle 6.png" alt="">
     </div>
-
-    </main>
-    <footer id="footer-creating">
-        <div> <img src="Flower Asset/Rectangle 9.png" alt=""></div>
-        <div>
-            <h3>FlowerShops</h3>
-            <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-            <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
-            im
+    <div class="input-field">
+        <h4>Get The Latest Deals</h4>
+        <p>$30 coupon for first shopping</p>
+         <input type="email" placeholder="Enter your email here....">
+         <button>Subscribe</button>
         </div>
+    </main>
+    <footer>
+            <div class="container">
+                <h3 class="title"> <span class="flower">Flower</span > Shops </h3>
+                <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+            </div>
     </footer>    
 </body>
 </html>
