--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
         <img class="pink-rose" src="Flower-Asset/Rectangle 6.png" alt="">
     </div>
     <div class="input-field">
-        <h4>Get The Latest Deals</h4>
+        <h1 class="deal">Get The Latest Deals</h1>
         <p>$30 coupon for first shopping</p>
-         <input type="email" placeholder="Enter your email here....">
+         <input class="email" type="email" placeholder="Enter your email here.............">
          <button>Subscribe</button>
         </div>
     </main>
