--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <footer>
             <div class="container">
                 <h3 class="title"> <span class="flower">Flower</span > Shops </h3>
-                <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-                <p>@2020-2023, FlowerShop.com. All rights reserved. </p>
+                <p class="content">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <p class="web-address">@2020-2023, FlowerShop.com. All rights reserved. </p>
             </div>
     </footer>    
 </body>
