extra section creating

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flower Shop</title>
+    <link rel="shortcut icon" href="Flower-Asset/flowericon.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,20 +26,20 @@
             It is a long established fact that a reader will be distracted by the readable<br> content of a page when looking at its layout.
             </p>
         <div class="three-images">
-        <div>
+                <div>
                     <img class="Pink" class="second-1" src="Flower-Asset/pngwing 6.png" alt="">
                     <p>Pink Flower Tree</p>
-         </div>
+                </div>
 
-               <div>
+                <div>
                     <img class="Flower" class="second-1"  src="Flower-Asset/pngwing 5.png" alt="">
                     <p>Pink Flower Tree</p>
                 </div>
-               <div>
+                <div>
                     <img class="Tree" class="second-1"  src="Flower-Asset/pngwing 7.png" alt="">
                     <p>Pink Flower Tree</p>
                 </div>
-                 </div>
+        </div>
         <div id="third-part">
             <div class="address">
                 <img src="Flower-Asset/Group 57.png" alt="">
@@ -52,11 +53,20 @@
             </div>
         </div>
         <div id="offer">
-            <div class="discount">
-            <h3>Hot Deal ! Sale Up To 25% Off</h3>
-            <p>It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
-            <button id="sign-in">Sign Up</button></div>
+            <div class="discount-offer">
+                <div class="discount">
+                <h3 class="sale">Hot Deal ! Sale Up To 25% Off</h3>
+                <p class="content">It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
+                <button id="sign-in">Sign Up</button></div>
+            </div>
             <img class="flower-vase" src="Flower-Asset/pngwing 8.png" alt="">
+        </div>
+        <div id="summer-offer">
+            <h2 class="Collection">Shop Our New Summer Collection!</h2>
+            <p class="Available">All Bouquets Available For Delivery & Collection</p>
+            <img class="image" src="Flower-Asset/a.jpeg" alt="">
+            <img class="image" src="Flower-Asset/aa.jpeg" alt="">
+            <img class="image" src="Flower-Asset/aaa.jpeg" alt="">
         </div>
 <h1 class="insta">Instagram</h1>
     <p class="third-paragraph" >It is a long established fact that a reader will be distracted by the readable <br>content of a page when looking at its layout.</p>
