Alhamdulillah it's done

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                 </div>
 
                 <div>
-                    <img class="Flower" class="second-1"  src="Flower-Asset/pngwing 5.png" alt="">
+                    <img class="Pink" class="second-1"  src="Flower-Asset/pngwing 5.png" alt="">
                     <p>Pink Flower Tree</p>
                 </div>
                 <div>
-                    <img class="Tree" class="second-1"  src="Flower-Asset/pngwing 7.png" alt="">
+                    <img class="Pink" class="second-1"  src="Flower-Asset/pngwing 7.png" alt="">
                     <p>Pink Flower Tree</p>
                 </div>
         </div>
